--- a/contact.html
+++ b/contact.html
@@ -40,13 +40,13 @@
 
 	<div>
 	
-		<img id= "logo1" src="/images/SCAN AND PAY LOGO.png">
+		<img id= "logo1" src="/img/SCAN AND PAY LOGO.png">
 			
 
 	
 	<div id="bloqueBlanco">
 		<h2 id="texto1" >Bienvenido </h1>
-	  <div><img  id="imagen21" src="/images/bg.png" width=100%  alt=""/>	</div>
+	  <div><img  id="imagen21" src="/img/bg.png" width=100%  alt=""/>	</div>
       <h2 id="texto2" >Empieza a hacer compras inteligentes, sin filas, sin esperar, lo que quieres, cuando quieres. </h1>
 		<form id="formulariodeiniciodesesion" action="/action_page.php">
 			<input type="text" id="fname" name="fname" placeholder="Correo" ><br><br>
